syntax = "proto3";

package redpanda.api.console.v1alpha;

import "buf/validate/validate.proto";

// ListMessagesRequest is the request for ListMessages call.
message ListMessagesRequest {
  string topic = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 128
  ]; // Topic name.
}

// ListMessagesResponse is the response for ListMessages call.
message ListMessagesResponse {}

// ConsoleService represents the Console API service.
service ConsoleService {
  // ListMessages lists the messages according to the requested query.
  rpc ListMessages(ListMessagesRequest) returns (stream ListMessagesResponse) {}
}
