syntax = "proto3";

package redpanda.api.console.v1alpha1;

import "redpanda/api/auth/v1/authorization.proto";
import "redpanda/api/dataplane/v1alpha2/transform.proto";

message ListTransformsRequest {
  redpanda.api.dataplane.v1alpha2.ListTransformsRequest request = 1;
}

message ListTransformsResponse {
  redpanda.api.dataplane.v1alpha2.ListTransformsResponse response = 1;
}

message GetTransformRequest {
  redpanda.api.dataplane.v1alpha2.GetTransformRequest request = 1;
}

message GetTransformResponse {
  redpanda.api.dataplane.v1alpha2.GetTransformResponse response = 1;
}

message DeleteTransformRequest {
  redpanda.api.dataplane.v1alpha2.DeleteTransformRequest request = 1;
}

message DeleteTransformResponse {
  redpanda.api.dataplane.v1alpha2.DeleteTransformResponse response = 1;
}

service TransformService {
  rpc ListTransforms(ListTransformsRequest) returns (ListTransformsResponse) {
    option (redpanda.api.auth.v1.authorization) = {
      required_permission: PERMISSION_VIEW
      api: API_REDPANDA_ADMIN
    };
  }

  rpc GetTransform(GetTransformRequest) returns (GetTransformResponse) {
    option (redpanda.api.auth.v1.authorization) = {
      required_permission: PERMISSION_VIEW
      api: API_REDPANDA_ADMIN
    };
  }

  rpc DeleteTransform(DeleteTransformRequest) returns (DeleteTransformResponse) {
    option (redpanda.api.auth.v1.authorization) = {
      required_permission: PERMISSION_ADMIN
      api: API_REDPANDA_ADMIN
    };
  }
}
